Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13557

LU-11023 (quota pools) breaks building with gcc9

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Upstream
    • None
    • 3
    • 9223372036854775807

      gcc9 fails to build with errors like this:

      In file included from /home/lustre/master-mine/lustre/quota/qmt_entry.c:33:
      /home/lustre/master-mine/lustre/quota/qmt_entry.c: In function ‘qmt_seed_glbe_all’:
      /home/lustre/master-mine/lustre/quota/qmt_internal.h:461:12: error: inlining failed in call to always_inline ‘qmt_sarr_get_idx’: function body not available
        461 | inline int qmt_sarr_get_idx(struct qmt_pool_info *qpi, int arr_idx);
            |            ^~~~~~~~~~~~~~~~
      /home/lustre/master-mine/lustre/quota/qmt_entry.c:1089:10: note: called from here
       1089 |    idx = qmt_sarr_get_idx(qpi, j);
            |          ^~~~~~~~~~~~~~~~~~~~~~~~
       

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: